# charm-relation-interfaces

./: .gitignore  .interface-validator.py  CHARMS_YAML_SPEC.md  CONTRIBUTING.md  LEGEND.md  README.md  README_CHARMS_YAML.md  README_INTERFACE_TESTS.md  charmcraft.yaml  index.json  interface-tests-requirements.txt  pyproject.toml  run_matrix.py  tox.ini
.github/workflows/: check-json-schemas.yaml  discover.yaml  dispatch-matrix-tests.yaml  generate-index.yaml  matrix-tests.yaml  quality-checks.yaml
database/: README.md  charms.yaml
database/schemas/: consumer.json  provider.json
docs/: README.md  build.py
docs/json_schemas/fiveg_amf_n2/: provider.json  requirer.json
docs/kratos_external_idp/v0/: provider.json  requirer.json
facade-charm/: README.md  custom_interfaces.yaml  params.yaml  tox.ini  update_endpoints.py
facade-charm/src/: charm.py
facade-charm/tests/integration/: test_charm.py
facade-charm/tests/unit/: test_charm.py
facade_charm/: README.md  charmcraft.yaml  charmhub_interfaces.yaml  custom_interfaces.yaml  fetch_interfaces_from_charmhub.py  tox.ini  update_endpoints.py
facade_charm/mocks/: __DO_NOT_TOUCH.md
facade_charm/mocks/provide/: provide-aar.yaml  provide-agent-auth.yaml  provide-alertmanager_dispatch.yaml  provide-alertmanager_remote_configuration.yaml  provide-anbox-stream-gateway.yaml  provide-apache-vhost-config.yaml  provide-apache-website.yaml  provide-arangodb.yaml  provide-auth_proxy.yaml  provide-autoscaling.yaml  provide-aws-iam.yaml  provide-aws-integration.yaml  provide-azure-integration.yaml  provide-barbican-hsm.yaml  provide-barbican-secrets.yaml  provide-baremetal.yaml  provide-bgp.yaml  provide-bind-rndc.yaml  provide-block-storage.yaml  provide-cassandra.yaml  provide-catalogue.yaml  provide-ceilometer.yaml  provide-ceph-admin.yaml  provide-ceph-bootstrap.yaml  provide-ceph-client.yaml  provide-ceph-dashboard.yaml  provide-ceph-iscsi-admin-access.yaml  provide-ceph-mds.yaml  provide-ceph-osd.yaml  provide-ceph-radosgw.yaml  provide-ceph-rbd-mirror.yaml  provide-certificate_transfer.yaml  provide-cinder-backend.yaml  provide-cinder-backup.yaml  provide-cinder-ceph-key.yaml  provide-cinder-gw.yaml  provide-cinder-nedge.yaml  provide-cinder.yaml  provide-config-server.yaml  provide-container-runtime.yaml  (+217 more)
facade_charm/mocks/require/: require-aar.yaml  require-agent-auth.yaml  require-alertmanager_dispatch.yaml  (+254 more)
facade_charm/src/: charm.py
grafana_auth/: README.md
grafana_auth/schemas/: provider.json  requirer.json
ingress/: README.md
ingress/schemas/: provider.json  requirer.json
ingress_per_unit/: README.md
ingress_per_unit/schemas/: provider.json  requirer.json
interfaces/: schema_base.py
interfaces/acme_config/: README.md
interfaces/fiveg_amf_n2/: README.md
interfaces/sdcore_management/: README.md  schema.py
interfaces/smtp/: README.md  schema.py
interfaces/velero_backup_config/: README.md  interface.yaml  schema.py
k8s-service/: README.md
k8s-service/schemas/: provider.json  requirer.json
kafka/: README.md
kafka-client/: README.md
kafka-client/schemas/: requirer.json
kafka/schemas/: provider.json  requirer.json
kafka_client/: README.md  charms.yaml
kafka_client/schemas/: provider.json  requirer.json
libraries/: LICENSE  README.md  charmcraft.yaml  tox.ini
libraries/src/: charm.py
mongodb/: README.md  charms.yaml
mongodb/schemas/: provider.json
mongodb_client/schemas/: provider.json  requirer.json
mysql/: README.md
mysql_client/: charms.yaml
mysql_client/schemas/: provider.json  requirer.json
postgresql/: README.md
postgresql/schemas/: provider.json  requirer.json
postgresql_client/: charms.yaml
postgresql_client/schemas/: provider.json  requirer.json
prometheus_remote_write/: README.md
prometheus_remote_write/schemas/: consumer.json  provider.json  requirer.json
tester/: README.md  charmcraft.yaml  check_interface_tests.py  metadata.yaml  requirements-test.txt  requirements.txt  run_interface_tests.py  tests.yaml  tox.ini
tester/plugin/: README.md  collect_interface_tests.py  errors.py  interface_test.py  pyproject.toml  pytest_interface_tester.py  requirements-plugin.txt  setup.py
tester/src/: charm.py  main.py  test_cases.py
tester/tests/: test_e2e.py
tests/test_docs/: test_build.py
tests/test_plugin/: test_collect_interface_tests.py  test_e2e.py
tests/test_unit/: test_build.py  test_interface_tests.py
tls_certificates/: README.md  charms.yaml
tls_certificates/schemas/: provider.json  requirer.json
tls_certificates/v0/: README.md  charms.yaml
tls_certificates/v1/: README.md
utils/: generate_index.py  interface-validator.py
(+600 files in other folders)
